--- a/food.html
+++ b/food.html
@@ -46,7 +46,7 @@
       </div>
       <div class="food-item">
         <img src="food/salad.jpeg" alt="salad" />
-        <label><input type="checkbox" name="food" value="salad" /> salad</label>
+        <label><input type="checkbox" name="food" value="salad(which you would never pick but incase you change your mind haha)" /> salad</label>
       </div>
       <div class="food-item">
         <img src="food/steak.jpeg" alt="steak" />
