--- a/food.html
+++ b/food.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="foodquestion">
-      <b>What food would Mani like to eat?</b>
+      <b>What food would Mani like to eat on our date?</b>
     </div>
 
     <div class="food-selection">
