--- a/dessert.html
+++ b/dessert.html
@@ -24,7 +24,7 @@
       </div>
       <div class="dessert-item">
         <img src="food/che.jpeg" alt="che" />
-        <label><input type="checkbox" name="dessert" value="che" /> che</label>
+        <label><input type="checkbox" name="dessert" value="thick shake?(almond milk of course xD)" /> thick shake?(almond milk of course xD)</label>
       </div>
       <div class="dessert-item">
         <img src="food/mochi.jpeg" alt="mochi" />
@@ -48,7 +48,7 @@
       </div>
     </div>
     <button class="button" onclick="location.href='activities.html'">
-      Continue UWU
+      Continue 
     </button>
   </body>
 </html>
